kubernetes/image-registry/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: image-registry
  labels:
    app: docker-registry
#    chart: docker-registry-2.3.0
#    release: docker-registry
#    heritage: Helm
spec:
  selector:
    matchLabels:
      app: docker-registry
      release: docker-registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
        release: docker-registry
      annotations:
        checksum/config: d265f2db5d737c2418250a0fdae698ec5d00eb33c102363ce038f145e6e420c4
        checksum/secret: 06013db81059491bcaaa59d6dc74bb8dde365939b492d8605bcfbccef01e25f3
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: docker-registry
          image: "registry:3.0.0"
          imagePullPolicy: Always
          command:
            - /bin/registry
            - serve
            - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: "docker-registry-config"
              mountPath: "/etc/docker/registry"
            - name: auth
              mountPath: /auth
              readOnly: true
            - name: data
              mountPath: /var/lib/registry/
      volumes:
        - name: docker-registry-config
          configMap:
            name: docker-registry-config
        - name: auth
          secret:
            secretName: docker-registry-secret
            items:
              - key: htpasswd
                path: htpasswd
        - name: data
          persistentVolumeClaim:
            claimName: images-nfs
