kubernetes/image-registry/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-clusterip
  namespace: image-registry
  labels:
    app: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: docker-registry
