kubernetes/image-registry/svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-nodeport
  namespace: image-registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  ports:
    - name: http
      port: 30003
      targetPort: 5000
      nodePort: 30003
      protocol: TCP
  selector:
    app: docker-registry
